Changes for End User mode

--- a/SherpaDesk/Info.xaml
+++ b/SherpaDesk/Info.xaml
@@ -52,85 +52,85 @@
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
             <Grid Grid.Column="1" Grid.RowSpan="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                    <Grid Width="800" Height="500" Grid.Row="0" HorizontalAlignment="Left" Margin="30,0,30,30" VerticalAlignment="Center">
-                        <Grid.Background>
-                            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                                <GradientStop Color="#72585858"/>
-                                <GradientStop Color="#19040040" Offset="1"/>
-                            </LinearGradientBrush>
-                        </Grid.Background>
+                <Grid Width="800" Height="500" Grid.Row="0" HorizontalAlignment="Left" Margin="30,0,30,30" VerticalAlignment="Center">
+                    <Grid.Background>
+                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                            <GradientStop Color="#72585858"/>
+                            <GradientStop Color="#19040040" Offset="1"/>
+                        </LinearGradientBrush>
+                    </Grid.Background>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                    <Grid Width="auto" HorizontalAlignment="Center">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="auto" />
-                            <RowDefinition />
                         </Grid.RowDefinitions>
-                        <Grid Width="auto" HorizontalAlignment="Center">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition Width="auto" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Name="OpenCount" Foreground="White" Text="0" FontSize="180" Height="auto" HorizontalAlignment="Center" Tapped="OpenCount_Tapped"  />
+                        <TextBlock Text="Open Tickets" Foreground="White" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Bottom" />
+                        <Image Grid.Column="1" HorizontalAlignment="Left" Margin="60,20,60,0" VerticalAlignment="Center" Source="Assets/Images/home-line-devider.png"/>
+                        <Grid Name="UserStatisticsGrid" Grid.Column="2" Height="auto" VerticalAlignment="Center" Margin="0,25,0,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="auto" />
+                            </Grid.RowDefinitions>
+                            <TextBlock Name="OpenAsEndUserCount" Foreground="White" Text="0" FontSize="45" HorizontalAlignment="Right" Tapped="OpenAsEndUserCount_Tapped" />
+                            <TextBlock Name="OpenAsTechCount" Foreground="White" Text="0" Grid.Row="1" FontSize="45" HorizontalAlignment="Right" Tapped="OpenAsTechCount_Tapped" />
+                            <TextBlock Name="OpenAsAltTechCount" Foreground="White" Text="0" Grid.Row="2" FontSize="45" HorizontalAlignment="Right" Tapped="OpenAsAltTechCount_Tapped" />
+                            <TextBlock Text="As User" Foreground="White" Margin="10,0,0,5" Grid.Column="1" FontSize="30" VerticalAlignment="Bottom" />
+                            <TextBlock Text="As Tech" Foreground="White" Margin="10,0,0,5" Grid.Column="1" Grid.Row="1" FontSize="30" VerticalAlignment="Bottom" />
+                            <TextBlock Text="Alt Tech" Foreground="White" Margin="10,0,0,4" Grid.Column="1" Grid.Row="2" FontSize="30" VerticalAlignment="Bottom" />
+                        </Grid>
+                    </Grid>
+                    <Grid Name="AccountStatisticsGrid" Grid.Row="1" Margin="20,20,20,20" Height="auto">
+                        <Grid Height="auto">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition />
+                                <ColumnDefinition />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="auto" />
                             </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="auto" />
-                                <ColumnDefinition Width="auto" />
-                                <ColumnDefinition Width="auto" />
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Name="OpenCount" Foreground="White" Text="0" FontSize="180" Height="auto" HorizontalAlignment="Center" Tapped="OpenCount_Tapped"  />
-                            <TextBlock Text="Open Tickets" Foreground="White" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Bottom" />
-                            <Image Grid.Column="1" HorizontalAlignment="Left" Margin="60,20,60,0" VerticalAlignment="Center" Source="Assets/Images/home-line-devider.png"/>
-                            <Grid Grid.Column="2" Height="auto" VerticalAlignment="Center" Margin="0,25,0,0">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition />
-                                    <ColumnDefinition />
-                                </Grid.ColumnDefinitions>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="auto" />
-                                    <RowDefinition Height="auto" />
-                                    <RowDefinition Height="auto" />
-                                </Grid.RowDefinitions>
-                                <TextBlock Name="OpenAsEndUserCount" Foreground="White" Text="0" FontSize="45" HorizontalAlignment="Right" Tapped="OpenAsEndUserCount_Tapped" />
-                                <TextBlock Name="OpenAsTechCount" Foreground="White" Text="0" Grid.Row="1" FontSize="45" HorizontalAlignment="Right" Tapped="OpenAsTechCount_Tapped" />
-                                <TextBlock Name="OpenAsAltTechCount" Foreground="White" Text="0" Grid.Row="2" FontSize="45" HorizontalAlignment="Right" Tapped="OpenAsAltTechCount_Tapped" />
-                                <TextBlock Text="As User" Foreground="White" Margin="10,0,0,5" Grid.Column="1" FontSize="30" VerticalAlignment="Bottom" />
-                                <TextBlock Text="As Tech" Foreground="White" Margin="10,0,0,5" Grid.Column="1" Grid.Row="1" FontSize="30" VerticalAlignment="Bottom" />
-                                <TextBlock Text="Alt Tech" Foreground="White" Margin="10,0,0,4" Grid.Column="1" Grid.Row="2" FontSize="30" VerticalAlignment="Bottom" />
-                            </Grid>
+                            <TextBlock Grid.Column="1" Foreground="White" Text="Hours" FontSize="22" HorizontalAlignment="Center" />
+                            <TextBlock Grid.Column="2" Foreground="White" Text="Expenses" FontSize="22" HorizontalAlignment="Center" />
+                            <TextBlock Grid.Column="3" Foreground="White" Text="Tickets" FontSize="22" HorizontalAlignment="Center" />
                         </Grid>
-                        <Grid Grid.Row="1" Margin="20,20,20,20" Height="auto">
-                            <Grid Height="auto">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition />
-                                    <ColumnDefinition />
-                                    <ColumnDefinition />
-                                    <ColumnDefinition />
-                                </Grid.ColumnDefinitions>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="auto" />
-                                </Grid.RowDefinitions>
-                                <TextBlock Grid.Column="1" Foreground="White" Text="Hours" FontSize="22" HorizontalAlignment="Center" />
-                                <TextBlock Grid.Column="2" Foreground="White" Text="Expenses" FontSize="22" HorizontalAlignment="Center" />
-                                <TextBlock Grid.Column="3" Foreground="White" Text="Tickets" FontSize="22" HorizontalAlignment="Center" />
-                            </Grid>
-                            <ListView x:Name="StatInfoList" ScrollViewer.VerticalScrollMode="Enabled" ScrollViewer.VerticalScrollBarVisibility="Auto" HorizontalAlignment="Stretch"  Margin="0,40,0,0" SelectionMode="None">
-                                <ListView.ItemTemplate>
-                                    <DataTemplate>
-                                        <Grid Width="760">
-                                            <Grid.ColumnDefinitions>
-                                                <ColumnDefinition />
-                                                <ColumnDefinition />
-                                                <ColumnDefinition />
-                                                <ColumnDefinition />
-                                            </Grid.ColumnDefinitions>
-                                            <Grid.RowDefinitions>
-                                                <RowDefinition />
-                                            </Grid.RowDefinitions>
-                                            <TextBlock Text="{Binding AccountName}" Foreground="White" FontSize="22" HorizontalAlignment="Left" />
-                                            <TextBlock Text="{Binding UninvoicedTimes}" Grid.Column="1" Foreground="White" FontSize="22" FontWeight="Bold" HorizontalAlignment="Center" />
-                                            <TextBlock Text="{Binding UnInvoicedExpenses}" Grid.Column="2" Foreground="White" FontSize="22" FontWeight="Bold" HorizontalAlignment="Center" />
-                                            <TextBlock Text="{Binding OpenTickets}" Grid.Column="3" Foreground="White" FontSize="22" FontWeight="Bold" HorizontalAlignment="Center" />
-                                        </Grid>
-                                    </DataTemplate>
-                                </ListView.ItemTemplate>
-                            </ListView>
-                        </Grid>
+                        <ListView x:Name="StatInfoList" ScrollViewer.VerticalScrollMode="Enabled" ScrollViewer.VerticalScrollBarVisibility="Auto" HorizontalAlignment="Stretch"  Margin="0,40,0,0" SelectionMode="None">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <Grid Width="760">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition />
+                                            <ColumnDefinition />
+                                            <ColumnDefinition />
+                                            <ColumnDefinition />
+                                        </Grid.ColumnDefinitions>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition />
+                                        </Grid.RowDefinitions>
+                                        <TextBlock Text="{Binding AccountName}" Foreground="White" FontSize="22" HorizontalAlignment="Left" />
+                                        <TextBlock Text="{Binding UninvoicedTimes}" Grid.Column="1" Foreground="White" FontSize="22" FontWeight="Bold" HorizontalAlignment="Center" />
+                                        <TextBlock Text="{Binding UnInvoicedExpenses}" Grid.Column="2" Foreground="White" FontSize="22" FontWeight="Bold" HorizontalAlignment="Center" />
+                                        <TextBlock Text="{Binding OpenTickets}" Grid.Column="3" Foreground="White" FontSize="22" FontWeight="Bold" HorizontalAlignment="Center" />
+                                    </Grid>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
                     </Grid>
+                </Grid>
             </Grid>
             <telerik:RadCustomHubTile x:Name="TimeButton" Grid.Column="0" HorizontalAlignment="Right" Margin="0,0,5,5" Height="150" VerticalAlignment="Top" Width="150" Background="#D8E9EDEF" Tapped="TimeButton_Tapped">
                 <telerik:RadCustomHubTile.FrontContent>
