--- a/SherpaDesk/TicketDetails.xaml
+++ b/SherpaDesk/TicketDetails.xaml
@@ -287,7 +287,7 @@
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
-                <Grid>
+                <Grid Name="TimeLogResponseGrid">
                     <Grid.RowDefinitions>
                         <RowDefinition />
                         <RowDefinition />
