--- a/SherpaDesk/TicketDetails.xaml
+++ b/SherpaDesk/TicketDetails.xaml
@@ -287,13 +287,13 @@
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
-                <Grid Name="TimeLogResponseGrid">
+                <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition />
                         <RowDefinition />
                         <RowDefinition />
                     </Grid.RowDefinitions>
-                    <Grid Style="{StaticResource LayoutRootStyle}" RequestedTheme="Light" Grid.Row="0" HorizontalAlignment="Center" Background="Transparent">
+                    <Grid Name="TimeLogResponseGrid" Style="{StaticResource LayoutRootStyle}" RequestedTheme="Light" Grid.Row="0" HorizontalAlignment="Center" Background="Transparent">
                         <Grid.RowDefinitions>
                             <RowDefinition />
                             <RowDefinition />
@@ -342,7 +342,7 @@
                         </ComboBox>
                     </Grid>
                     <TextBox Name="CommentsTextbox" FontSize="25" Margin="0,10,0,15" TextWrapping="Wrap" Grid.Row="1" Height="100" ScrollViewer.VerticalScrollMode="Auto" HorizontalAlignment="Stretch" AcceptsReturn="True" />
-                    <Grid Grid.Row="2" Width="auto" HorizontalAlignment="Right">
+                    <Grid Grid.Row="2" Width="auto" HorizontalAlignment="Right" Margin="0,0,-7,0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition />
                             <ColumnDefinition />
@@ -351,10 +351,16 @@
                         <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="0,0,20,0" ScrollViewer.VerticalScrollMode="Auto" Height="70">
                             <TextBlock x:Name="SelectedFilesList" FontSize="16" Margin="0,0,10,0" TextWrapping="Wrap" Width="500" />
                         </ScrollViewer>
-                        <Image Grid.Column="1" x:Name="attachButton" Source="Assets/Images/attach-button.png" Tapped="attachButton_Tapped"  />
-                        <Grid x:Name="ReplyGrid" Grid.Column="2" Width="150" Height="60" Background="#FF92C74F" VerticalAlignment="Top" Margin="20,0,0,0" PointerEntered="ReplyGrid_PointerEntered" PointerExited="ReplyGrid_PointerExited" Tapped="ReplyGrid_Tapped">
+                        <Image Grid.Column="0" x:Name="attachButton" Source="Assets/Images/attach-button.png" Tapped="attachButton_Tapped"  />
+                        <Button x:Name="SaveButton" Content="Add Response" FontSize="30" Grid.Column="1" Background="#FF2F9129" PointerEntered="ReplyGrid_PointerEntered" PointerExited="ReplyGrid_PointerExited" Tapped="SaveButton_Tapped" />
+                        <Button x:Name="SaveAndReopenButton" Content="Save &amp; ReOpen ticket" FontSize="30" Grid.Column="2" Background="#FF2F9129" PointerEntered="ReplyGrid_PointerEntered" PointerExited="ReplyGrid_PointerExited" Tapped="SaveAndReopenButton_Click" Visibility="Collapsed" />
+                        <CheckBox Name="HoldBox" Content="Place on Hold" FontSize="30" HorizontalAlignment="Right" Grid.Column="3" />
+                        <Button Name="SaveDoNotReopenButton" Content="Save but Do Not ReOpen" FontSize="30" Grid.Column="4" PointerEntered="ReplyGrid_PointerEntered" PointerExited="ReplyGrid_PointerExited" Tapped="SaveDoNotReopenLink_Click" Visibility="Collapsed" />
+                        <CheckBox Name="WaitingBox" Content="Waiting On Response" HorizontalAlignment="Right" FontSize="30" Grid.Column="5" />
+
+                        <!--<Grid x:Name="ReplyGrid" Grid.Column="2" Width="150" Height="60" Background="#FF92C74F" VerticalAlignment="Top" Margin="20,0,0,0" PointerEntered="ReplyGrid_PointerEntered" PointerExited="ReplyGrid_PointerExited" Tapped="ReplyGrid_Tapped">
                             <TextBlock Text="Reply" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="20" />
-                        </Grid>
+                        </Grid>-->
                     </Grid>
                 </Grid>
                 <Grid Grid.Row="1">
