--- a/SherpaDesk/TicketDetails.xaml
+++ b/SherpaDesk/TicketDetails.xaml
@@ -342,25 +342,30 @@
                         </ComboBox>
                     </Grid>
                     <TextBox Name="CommentsTextbox" FontSize="25" Margin="0,10,0,15" TextWrapping="Wrap" Grid.Row="1" Height="100" ScrollViewer.VerticalScrollMode="Auto" HorizontalAlignment="Stretch" AcceptsReturn="True" />
-                    <Grid Grid.Row="2" Width="auto" HorizontalAlignment="Right" Margin="0,0,-7,0">
+                    <Grid Grid.Row="2" Width="auto" HorizontalAlignment="Stretch" Margin="0,0,0,0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition />
                             <ColumnDefinition />
                             <ColumnDefinition />
+                            <ColumnDefinition />
+                            <ColumnDefinition />
+                            <ColumnDefinition />
                         </Grid.ColumnDefinitions>
-                        <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="0,0,20,0" ScrollViewer.VerticalScrollMode="Auto" Height="70">
-                            <TextBlock x:Name="SelectedFilesList" FontSize="16" Margin="0,0,10,0" TextWrapping="Wrap" Width="500" />
+                        <ScrollViewer Grid.Column="1" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="20,0,20,0" ScrollViewer.VerticalScrollMode="Auto" Height="70">
+                            <TextBlock x:Name="SelectedFilesList" FontSize="16" Margin="0,0,10,0" TextWrapping="Wrap" Width="300" />
                         </ScrollViewer>
-                        <Image Grid.Column="0" x:Name="attachButton" Source="Assets/Images/attach-button.png" Tapped="attachButton_Tapped"  />
-                        <Button x:Name="SaveButton" Content="Add Response" FontSize="30" Grid.Column="1" Background="#FF2F9129" PointerEntered="ReplyGrid_PointerEntered" PointerExited="ReplyGrid_PointerExited" Tapped="SaveButton_Tapped" />
-                        <Button x:Name="SaveAndReopenButton" Content="Save &amp; ReOpen ticket" FontSize="30" Grid.Column="2" Background="#FF2F9129" PointerEntered="ReplyGrid_PointerEntered" PointerExited="ReplyGrid_PointerExited" Tapped="SaveAndReopenButton_Click" Visibility="Collapsed" />
-                        <CheckBox Name="HoldBox" Content="Place on Hold" FontSize="30" HorizontalAlignment="Right" Grid.Column="3" />
-                        <Button Name="SaveDoNotReopenButton" Content="Save but Do Not ReOpen" FontSize="30" Grid.Column="4" PointerEntered="ReplyGrid_PointerEntered" PointerExited="ReplyGrid_PointerExited" Tapped="SaveDoNotReopenLink_Click" Visibility="Collapsed" />
-                        <CheckBox Name="WaitingBox" Content="Waiting On Response" HorizontalAlignment="Right" FontSize="30" Grid.Column="5" />
-
-                        <!--<Grid x:Name="ReplyGrid" Grid.Column="2" Width="150" Height="60" Background="#FF92C74F" VerticalAlignment="Top" Margin="20,0,0,0" PointerEntered="ReplyGrid_PointerEntered" PointerExited="ReplyGrid_PointerExited" Tapped="ReplyGrid_Tapped">
-                            <TextBlock Text="Reply" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="20" />
-                        </Grid>-->
+                        <Image x:Name="attachButton" Width="auto" Source="Assets/Images/attach-button.png" Tapped="attachButton_Tapped"  />
+                        <Grid x:Name="SaveButton" Grid.Column="2" Width="150" Height="60" Background="#FF92C74F" VerticalAlignment="Top" Margin="0,0,20,0" PointerEntered="ReplyGrid_PointerEntered" PointerExited="ReplyGrid_PointerExited" Tapped="SaveButton_Tapped">
+                            <TextBlock Text="Add Response" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="20" />
+                        </Grid>
+                        <Grid x:Name="SaveAndReopenButton" Grid.Column="4" Visibility="Collapsed" Width="215" Height="60" Margin="20,0,0,0" Background="#FF92C74F" VerticalAlignment="Top" PointerEntered="SaveAndReopenButton_PointerEntered" PointerExited="SaveAndReopenButton_PointerExited" Tapped="SaveAndReopenButton_Click">
+                            <TextBlock Text="Save &amp; ReOpen ticket" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="20" />
+                        </Grid>
+                        <Grid x:Name="SaveDoNotReopenButton" Visibility="Collapsed" Grid.Column="5" Width="245" Height="60" Margin="20,0,0,0" Background="#FF92C74F" VerticalAlignment="Top" PointerEntered="SaveDoNotReopenButton_PointerEntered" PointerExited="SaveDoNotReopenButton_PointerExited" Tapped="SaveDoNotReopenLink_Click">
+                            <TextBlock Text="Save but Do Not ReOpen" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="20" />
+                        </Grid>                        
+                        <CheckBox Name="HoldBox" Content="Place on Hold" FontSize="20" HorizontalAlignment="Left" Grid.Column="3" VerticalAlignment="Top" />
+                        <CheckBox Name="WaitingBox" Content="Waiting On Response" HorizontalAlignment="Right" FontSize="20" VerticalAlignment="Top" Margin="0,30,0,0" Grid.Column="3" />
                     </Grid>
                 </Grid>
                 <Grid Grid.Row="1">
