--- a/SherpaDesk/AddTicket.xaml
+++ b/SherpaDesk/AddTicket.xaml
@@ -43,7 +43,7 @@
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-        </Style>        
+        </Style>
     </common:LayoutAwarePage.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -67,8 +67,8 @@
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0" Foreground="#86abb6" Margin="0,30,80,70" FontSize="60" Text="Create Ticket" FontWeight="Normal"/>
-                    <HyperlinkButton VerticalAlignment="Top" Foreground="#86abb6" Margin="0,5,45,20" FontSize="35" Content="Add New User" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right" FontWeight="Normal" Tapped="AddUserLink_Tapped" />
-                    <Image Source="Assets/arrow-right.png" Stretch="None" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,15,0,0" Tapped="AddUserLink_Tapped" PointerEntered="AddUserArrow_PointerEntered" PointerExited="AddUserArrow_PointerExited" />
+                    <HyperlinkButton x:Name="AddUserLink" VerticalAlignment="Top" Foreground="#86abb6" Margin="0,5,45,20" FontSize="35" Content="Add New User" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right" FontWeight="Normal" Tapped="AddUserLink_Tapped" />
+                    <Image x:Name="AddUserArrow" Source="Assets/arrow-right.png" Stretch="None" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,15,0,0" Tapped="AddUserLink_Tapped" PointerEntered="AddUserArrow_PointerEntered" PointerExited="AddUserArrow_PointerExited" />
                 </Grid>
                 <Grid Style="{StaticResource LayoutRootStyle}" Grid.Row="1" Background="Transparent" x:Name="AddTicketGrid">
                     <Grid.RowDefinitions>
@@ -102,11 +102,12 @@
                     <Button Width="300" Height="40" Style="{StaticResource SubmitButtonStyle}" Content="Create Ticket" HorizontalAlignment="Stretch" Grid.Column="3" VerticalAlignment="Stretch" Grid.Row="8" Foreground="White" Tapped="SaveButton_Tapped" PointerEntered="SaveButton_PointerEntered" PointerExited="SaveButton_PointerExited" FontWeight="Normal" />
 
                     <TextBlock HorizontalAlignment="right" Foreground="#625e55" Grid.Column="0" Grid.Row="0" TextWrapping="Wrap" Text="End User" Margin="10,4,10,0" VerticalAlignment="Center" FontSize="20"/>
-                    <ComboBox x:Name="EndUserList" Grid.Column="1" Grid.Row="0" FontSize="18" HorizontalAlignment="Left" Width="450" Height="40" Margin="0,0,0,0" VerticalAlignment="Top" SelectionChanged="EndUserList_SelectionChanged" BorderBrush="#e1e1e1">
+                    <ComboBox x:Name="EndUserList" Grid.Column="1" Grid.Row="0" FontSize="18" HorizontalAlignment="Left" Width="450" Height="40" VerticalAlignment="Top" SelectionChanged="EndUserList_SelectionChanged" BorderBrush="#e1e1e1" Visibility="Visible">
                     </ComboBox>
-                    <HyperlinkButton Foreground="#625e55" Content="Me" Grid.Row="0" Grid.Column="2" Padding="0" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="20" FontWeight="Normal" Click="EndUserMeLink_Click"/>
+                    <TextBlock Name="EndUserText" Grid.Column="1" Grid.Row="0" FontSize="18" HorizontalAlignment="Left" VerticalAlignment="Center" Visibility="Collapsed"></TextBlock>
+                    <HyperlinkButton x:Name="EndUserMeLink" Foreground="#625e55" Content="Me" Grid.Row="0" Grid.Column="2" Padding="0" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="20" FontWeight="Normal" Click="EndUserMeLink_Click"/>
 
-                    <TextBlock HorizontalAlignment="right" Foreground="#625e55" Grid.Column="0" Grid.Row="1" TextWrapping="Wrap" Text="Account" Margin="10,4,10,0" VerticalAlignment="Center" FontSize="20"/>
+                    <TextBlock Name="AccountText" HorizontalAlignment="right" Foreground="#625e55" Grid.Column="0" Grid.Row="1" TextWrapping="Wrap" Text="Account" Margin="10,4,10,0" VerticalAlignment="Center" FontSize="20"/>
                     <ComboBox x:Name="AccountList" Grid.Column="1" Grid.Row="1" FontSize="18" HorizontalAlignment="Left" Width="450" Height="40" Margin="0,15,0,15" VerticalAlignment="Top" BorderBrush="#FFCDCDCD">
                     </ComboBox>
 
@@ -117,12 +118,12 @@
                     <TextBlock HorizontalAlignment="right" Foreground="#625e55" Grid.Column="0" Grid.Row="3" TextWrapping="Wrap" Text="Technician" Margin="10,4,10,0" VerticalAlignment="Center" FontSize="20"/>
                     <ComboBox x:Name="TechnicianList" Grid.Column="1" Grid.Row="3" FontSize="18" HorizontalAlignment="Left" Width="450" Height="40" Margin="0,15,0,15" VerticalAlignment="Top" BorderBrush="#FFCDCDCD">
                     </ComboBox>
-                    <HyperlinkButton Foreground="#625e55" Content="Me" Grid.Row="3" Grid.Column="2" Padding="0" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="20" FontWeight="Normal" Click="TechnicianMeLink_Click"/>
+                    <HyperlinkButton x:Name="TechnicianMeLink" Foreground="#625e55" Content="Me" Grid.Row="3" Grid.Column="2" Padding="0" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="20" FontWeight="Normal" Click="TechnicianMeLink_Click"/>
 
-                    <TextBlock HorizontalAlignment="right" Foreground="#625e55" Grid.Column="0" Grid.Row="4" TextWrapping="Wrap" Text="Alternate Tech" Margin="10,4,10,0" VerticalAlignment="Center" FontSize="20"/>
+                    <TextBlock x:Name="AlternateTechnicianText" HorizontalAlignment="right" Foreground="#625e55" Grid.Column="0" Grid.Row="4" TextWrapping="Wrap" Text="Alternate Tech" Margin="10,4,10,0" VerticalAlignment="Center" FontSize="20"/>
                     <ComboBox x:Name="AlternateTechnicianList" Grid.Column="1" Grid.Row="4" FontSize="18" HorizontalAlignment="Left" Width="450" Height="40" Margin="0,0,0,0" VerticalAlignment="Top" SelectionChanged="AlternateTechnicianList_SelectionChanged" BorderBrush="#FFCDCDCD">
                     </ComboBox>
-                    <HyperlinkButton Foreground="#625e55" Content="Me" Grid.Row="4" Grid.Column="2" Padding="0" HorizontalAlignment="Left" Margin="5,0,80,0" VerticalAlignment="Center" FontSize="20" FontWeight="Normal" Click="AlternateTechMeLink_Click"/>
+                    <HyperlinkButton x:Name="AlternateTechMeLink" Foreground="#625e55" Content="Me" Grid.Row="4" Grid.Column="2" Padding="0" HorizontalAlignment="Left" Margin="5,0,80,0" VerticalAlignment="Center" FontSize="20" FontWeight="Normal" Click="AlternateTechMeLink_Click"/>
 
                     <ScrollViewer HorizontalAlignment="Left" Grid.Column="1" Grid.ColumnSpan="3" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Grid.Row="5" Grid.RowSpan="2" Height="100" VerticalAlignment="Top" Width="auto">
                         <ListView x:Name="SelectedAlternateTechnicianList" Margin="0,0,0,0" VerticalAlignment="Top" FontSize="18" HorizontalAlignment="Left" Width="450" SelectionMode="None">
