--- a/SherpaDesk/TicketDetails.xaml
+++ b/SherpaDesk/TicketDetails.xaml
@@ -358,14 +358,14 @@
                         <Grid x:Name="SaveButton" Grid.Column="2" Width="150" Height="60" Background="#FF92C74F" VerticalAlignment="Top" Margin="0,0,20,0" PointerEntered="ReplyGrid_PointerEntered" PointerExited="ReplyGrid_PointerExited" Tapped="SaveButton_Tapped">
                             <TextBlock Text="Add Response" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="20" />
                         </Grid>
-                        <Grid x:Name="SaveAndReopenButton" Grid.Column="4" Visibility="Collapsed" Width="215" Height="60" Margin="20,0,0,0" Background="#FF92C74F" VerticalAlignment="Top" PointerEntered="SaveAndReopenButton_PointerEntered" PointerExited="SaveAndReopenButton_PointerExited" Tapped="SaveAndReopenButton_Click">
+                        <Grid x:Name="SaveAndReopenButton" Grid.Column="2" Visibility="Collapsed" Width="215" Height="60" Margin="20,0,0,0" Background="#FF92C74F" VerticalAlignment="Top" PointerEntered="SaveAndReopenButton_PointerEntered" PointerExited="SaveAndReopenButton_PointerExited" Tapped="SaveAndReopenButton_Click">
                             <TextBlock Text="Save &amp; ReOpen ticket" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="20" />
                         </Grid>
-                        <Grid x:Name="SaveDoNotReopenButton" Visibility="Collapsed" Grid.Column="5" Width="245" Height="60" Margin="20,0,0,0" Background="#FF92C74F" VerticalAlignment="Top" PointerEntered="SaveDoNotReopenButton_PointerEntered" PointerExited="SaveDoNotReopenButton_PointerExited" Tapped="SaveDoNotReopenLink_Click">
+                        <Grid x:Name="SaveDoNotReopenButton" Visibility="Collapsed" Grid.Column="3" Width="245" Height="60" Margin="20,0,0,0" Background="#FF92C74F" VerticalAlignment="Top" PointerEntered="SaveDoNotReopenButton_PointerEntered" PointerExited="SaveDoNotReopenButton_PointerExited" Tapped="SaveDoNotReopenLink_Click">
                             <TextBlock Text="Save but Do Not ReOpen" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="20" />
-                        </Grid>                        
-                        <CheckBox Name="HoldBox" Content="Place on Hold" FontSize="20" HorizontalAlignment="Left" Grid.Column="3" VerticalAlignment="Top" />
-                        <CheckBox Name="WaitingBox" Content="Waiting On Response" HorizontalAlignment="Right" FontSize="20" VerticalAlignment="Top" Margin="0,30,0,0" Grid.Column="3" />
+                        </Grid>
+                        <CheckBox Name="HoldBox" Content="Place on Hold" FontSize="20" HorizontalAlignment="Left" Grid.Column="4" VerticalAlignment="Top" Margin="5,15,5,5" />
+                        <CheckBox Name="WaitingBox" Content="Waiting On Response" HorizontalAlignment="Left" FontSize="20" VerticalAlignment="Top" Margin="5,15,5,5" Grid.Column="5" />
                     </Grid>
                 </Grid>
                 <Grid Grid.Row="1">
