--- a/SherpaDesk/TicketDetails.xaml
+++ b/SherpaDesk/TicketDetails.xaml
@@ -92,12 +92,12 @@
                     <ColumnDefinition />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <TextBlock Grid.ColumnSpan="2" Text="Place This Ticket On Hold" Padding="0,30,0,0" Foreground="#5f5f5f" HorizontalAlignment="Center" FontSize="30" />
-                <TextBox Name="OnHoldTextbox" FontSize="25" Margin="50,20,50,20" TextWrapping="Wrap" Grid.Row="1" Height="200" Grid.ColumnSpan="2" ScrollViewer.VerticalScrollMode="Auto" HorizontalAlignment="Stretch" AcceptsReturn="True" />
-                <Border x:Name="ConfirmYesOnHold" CornerRadius="10,10,10,10" Padding="0,3,0,0" Grid.Row="2" Background="#96c9de" Width="200" Margin="0,0,20,0" Height="60" HorizontalAlignment="Right" PointerEntered="ConfirmYesOnHold_PointerEntered" PointerExited="ConfirmYesOnHold_PointerExited" Tapped="ConfirmYesOnHold_Tapped">
-                    <TextBlock Text="Place on Hold" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="26" />
+                <TextBlock x:Name="OnHoldTitle" Grid.ColumnSpan="2" Text="Place This Ticket On Hold" Padding="0,30,0,0" Foreground="#5f5f5f" HorizontalAlignment="Center" FontSize="30" />
+                <TextBox Name="OnHoldTextbox" FontSize="25" Margin="50,20,50,20" TextWrapping="Wrap" Grid.Row="1" Height="200" Width="700" Grid.ColumnSpan="2" ScrollViewer.VerticalScrollMode="Auto" HorizontalAlignment="Stretch" AcceptsReturn="True" />
+                <Border x:Name="ConfirmYesOnHold" CornerRadius="10,10,10,10" Padding="0,3,0,0" Grid.Row="2" Background="#96c9de" Width="200" Margin="0,0,20,0" Height="60" HorizontalAlignment="Right" PointerEntered="ConfirmYesOnHold_PointerEntered" PointerExited="ConfirmYesOnHold_PointerExited" Tapped="ConfirmYes_Tapped">
+                    <TextBlock x:Name="ConfirmYesOnHoldText" Text="Place on Hold" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="26" />
                 </Border>
-                <Border x:Name="ConfirmNoOnHold" CornerRadius="10,10,10,10" Padding="0,3,0,0" Grid.Row="2" Grid.Column="1" Background="#cdcdcd" Margin="20,0,0,0" Width="200" Height="60" HorizontalAlignment="Left" PointerEntered="ConfirmNoOnHold_PointerEntered" PointerExited="ConfirmNoOnHold_PointerExited" Tapped="ConfirmNoOnHold_Tapped">
+                <Border x:Name="ConfirmNoOnHold" CornerRadius="10,10,10,10" Padding="0,3,0,0" Grid.Row="2" Grid.Column="1" Background="#cdcdcd" Margin="20,0,0,0" Width="200" Height="60" HorizontalAlignment="Left" PointerEntered="ConfirmNoOnHold_PointerEntered" PointerExited="ConfirmNoOnHold_PointerExited" Tapped="ConfirmNo_Tapped">
                     <TextBlock Text="Cancel" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="26" />
                 </Border>
             </Grid>
@@ -356,7 +356,7 @@
                         </ScrollViewer>
                         <Image x:Name="attachButton" Width="auto" Source="Assets/Images/attach-button.png" Tapped="attachButton_Tapped"  />
                         <Grid x:Name="SaveButton" Grid.Column="2" Width="150" Height="60" Background="#FF92C74F" VerticalAlignment="Top" Margin="0,0,20,0" PointerEntered="ReplyGrid_PointerEntered" PointerExited="ReplyGrid_PointerExited" Tapped="SaveButton_Tapped">
-                            <TextBlock Text="Add Response" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="20" />
+                            <TextBlock Text="Reply" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="20" />
                         </Grid>
                         <Grid x:Name="SaveAndReopenButton" Grid.Column="2" Visibility="Collapsed" Width="215" Height="60" Margin="20,0,0,0" Background="#FF92C74F" VerticalAlignment="Top" PointerEntered="SaveAndReopenButton_PointerEntered" PointerExited="SaveAndReopenButton_PointerExited" Tapped="SaveAndReopenButton_Click">
                             <TextBlock Text="Save &amp; ReOpen ticket" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="20" />
