logger implemented with Windows.Foundation.Diagnostics features

--- a/packages/winrtxamltoolkit.1.6.1.3/lib/netcore45/WinRTXamlToolkit/Themes/Generic.xaml
+++ b/packages/winrtxamltoolkit.1.6.1.3/lib/netcore45/WinRTXamlToolkit/Themes/Generic.xaml
@@ -29,6 +29,8 @@
         <ResourceDictionary
             Source="ms-appx:///WinRTXamlToolkit/Controls/NumericUpDown/NumericUpDown.xaml" />
         <ResourceDictionary
+            Source="ms-appx:///WinRTXamlToolkit/Controls/ToolWindow/ToolWindow.xaml" />
+        <ResourceDictionary
             Source="ms-appx:///WinRTXamlToolkit/Controls/TreeView/TreeView.xaml" />
         <ResourceDictionary
             Source="ms-appx:///WinRTXamlToolkit/Controls/WatermarkPasswordBox/WatermarkPasswordBox.xaml" />
