visual bugs in timesheet grids and refactoring

--- a/SherpaDesk/TimeLogs.xaml
+++ b/SherpaDesk/TimeLogs.xaml
@@ -1,7 +1,7 @@
 ﻿<common:LayoutAwarePage
     x:Name="pageRoot"
     x:Class="SherpaDesk.TimeLogs"
-    DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
+    DataContext="{Binding TimeLogModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SherpaDesk"
@@ -159,7 +159,7 @@
                     Height="auto"
                     Margin="0,15,0,0"                    
                     SelectionMode="None"
-                    ItemsSource="{Binding List, UpdateSourceTrigger=PropertyChanged}">
+                    ItemsSource="{Binding List, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}">
                     <telerik:RadDataGrid.SortDescriptors>
                         <telerik:PropertySortDescriptor PropertyName="StartStopTime" SortOrder="Ascending" />
                     </telerik:RadDataGrid.SortDescriptors>
